// Vitest Snapshot v1

exports[`Message Component test > :closeBtn is a function, () => VNode. 1`] = `
<div>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    默认的message
    <b
      class="t-message__close"
    >
      x
    </b>
  </div>
</div>
`;

exports[`Message Component test > :closeBtn is a string, equal "关闭". 1`] = `
<div>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    默认的message
    <span
      class="t-message__close"
    >
      关闭
    </span>
  </div>
</div>
`;

exports[`Message Component test > :closeBtn is true, render default close button. 1`] = `
<div>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    默认的message
    <svg
      class="t-icon t-icon-close t-message__close"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
  </div>
</div>
`;

exports[`Message Component test > :default is a function, () => <b>这是重要信息</b> 1`] = `
<div>
  <div
    class="t-message t-is-info"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <b>
      这是重要信息
    </b>
  </div>
</div>
`;

exports[`Message Component test > :icon is a function, () => TIconMore 1`] = `
<div>
  <div
    class="t-message t-is-info"
  >
    默认的message
  </div>
</div>
`;

exports[`Message Component test > :icon is false 1`] = `
<div>
  <div
    class="t-message t-is-info"
  >
    默认的message
  </div>
</div>
`;

exports[`Message Component test > props > :closeBtn is a function, () => VNode. 1`] = `
<div>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    默认的message
    <b
      class="t-message__close"
    >
      x
    </b>
  </div>
</div>
`;

exports[`Message Component test > props > :closeBtn is a string, equal "关闭". 1`] = `
<div>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    默认的message
    <span
      class="t-message__close"
    >
      关闭
    </span>
  </div>
</div>
`;

exports[`Message Component test > props > :closeBtn is true, render default close button. 1`] = `
<div>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    默认的message
    <svg
      class="t-icon t-icon-close t-message__close"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
  </div>
</div>
`;

exports[`Message Component test > props > :default is a function, () => <b>这是重要信息</b> 1`] = `
<div>
  <div
    class="t-message t-is-info"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <b>
      这是重要信息
    </b>
  </div>
</div>
`;

exports[`Message Component test > props > :icon is a function, () => TIconMore 1`] = `
<div>
  <div
    class="t-message t-is-info"
  >
    默认的message
  </div>
</div>
`;

exports[`Message Component test > props > :icon is false 1`] = `
<div>
  <div
    class="t-message t-is-info"
  >
    默认的message
  </div>
</div>
`;

exports[`props > :closeBtn is a function, () => VNode. 1`] = `
<div>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    默认的message
    <b
      class="t-message__close"
    >
      x
    </b>
  </div>
</div>
`;

exports[`props > :closeBtn is a string, equal "关闭". 1`] = `
<div>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    默认的message
    <span
      class="t-message__close"
    >
      关闭
    </span>
  </div>
</div>
`;

exports[`props > :closeBtn is true, render default close button. 1`] = `
<div>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    默认的message
    <svg
      class="t-icon t-icon-close t-message__close"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
  </div>
</div>
`;

exports[`props > :default is a function, () => <b>这是重要信息</b> 1`] = `
<div>
  <div
    class="t-message t-is-info"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <b>
      这是重要信息
    </b>
  </div>
</div>
`;

exports[`props > :icon is a function, () => TIconMore 1`] = `
<div>
  <div
    class="t-message t-is-info"
  >
    默认的message
  </div>
</div>
`;

exports[`props > :icon is false 1`] = `
<div>
  <div
    class="t-message t-is-info"
  >
    默认的message
  </div>
</div>
`;
